kubernetes/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: rkogolang/repo:authentication_img
          ports:
            - containerPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  type: NodePort
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 30102
