kubernetes/health.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
  labels:
    app: health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
        - name: health
          image: rkogolang/repo:health_img
          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  type: NodePort
  selector:
    app: health
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30180
