kubernetes/mapsapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapsapi-deployment
  labels:
    app: mapsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapsapi
  template:
    metadata:
      labels:
        app: mapsapi
    spec:
      containers:
        - name: mapsapi
          image: rkogolang/repo:mapsapi_img
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: mapsapi-service
spec:
  type: NodePort
  selector:
    app: mapsapi
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 30102
