kubernetes/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metricsapi-deployment
  labels:
    app: metricsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metricsapi
  template:
    metadata:
      labels:
        app: metricsapi
    spec:
      containers:
        - name: metrics
          image: rkogolang/repo:metricsapi_img
          ports:
            - containerPort: 8005

---
apiVersion: v1
kind: Service
metadata:
  name: metricsapi-service
spec:
  type: NodePort
  selector:
    app: metricsapi
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
      nodePort: 30105
