kubernetes/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: rkogolang/repo:posts_img
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30100
