kubernetes/weatherapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapi-deployment
  labels:
    app: weatherapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherapi
  template:
    metadata:
      labels:
        app: weatherapi
    spec:
      containers:
        - name: weatherapi
          image: rkogolang/repo:weatherapi_img
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /healthL
              port: 8001
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: weatherapi-service
spec:
  type: NodePort
  selector:
    app: weatherapi
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30101
